--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>I am learning git and github</h1>
     <h2>This is my first repository</h2>
+    <h2>My name is srushti wanjari</h2>
 </body>
 </html>
