--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>This is my first repository</h2>
     <h2>My name is srushti wanjari</h2>
     <h3>I am from nagpur</h3>
+    <h3>I love to play volleyball</h3>
 </body>
 </html>
